<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <!--  <string name="fetching">Fetching data...</string>
      <string name="app_name">Spring CRM</string>
      <string name="loading_string">Loading...</string>
      <string name="your_changes_have_been_saved">Your changes have been saved!</string>
      <string name="firstName">First Name</string>
      <string name="lastName">Last Name</string>

      <string-array name="planets_array">
          <item>Mercury</item>
          <item>Venus</item>
          <item>Earth</item>
          <item>Mars</item>
          <item>Jupiter</item>
          <item>Saturn</item>
          <item>Uranus</item>
          <item>Neptune</item>
      </string-array>
      <string name="drawer_open">Open navigation drawer</string>
      <string name="drawer_close">Close navigation drawer</string>
      <string name="action_websearch">Web search</string>
      <string name="app_not_available">Sorry, there\'s no web browser available</string>



      <string name="action_items">Action Items</string>
      <string name="action_items_content">The action bar creates a unified and persistant navigation experience for your application and action items are a great way to provide a clear indication of what the user can do.</string>

      <string name="action_modes">Action Modes</string>
      <string name="action_modes_content">Action modes are used to display contextual information based on some interaction made by the user (long press, checkbox selection, etc). Like the normal action bar they also support splitting the action items to the bottom of the screen on small devices.</string>

      <string name="action_modes_no_action_bar">Action Modes (No Action Bar)</string>

      <string name="share_action_providers">Share Action Providers</string>
      <string name="share_action_providers_content">This activity demonstrates how to use an ActionProvider for adding functionality to the Action Bar. In particular this demo is adding a menu item with ShareActionProvider as its action provider. The ShareActionProvider is responsible for managing the UI for sharing actions.\n\nFor now, ShareActionProviders must be displayed on the action bar</string>

      <string name="action_providers">Action Providers</string>
      <string name="action_providers_content">This activity demonstrates how to implement an ActionProvider for adding functionality to the Action Bar. In particular this demo creates an ActionProvider for launching the system settings and adds a menu item with that provider.</string>

      <string name="collapsible">Collapsible Action Items</string>
      <string name="collapsible_content">This activity is a demonstration of how collapsible action items work. When you are concerned about the available room for items on small screens you should use this feature.\n\nIf you are looking for a proper SearchView implementation, see this "Search Views" example.</string>

      <string name="context_menus">Context Menus</string>
      <string name="context_menus_content">Since both ActionBarSherlock and Android use \'Menu\' and \'MenuItem\' class names you must take extra care when using context menus. It is still very much possible to use both in a single activity.</string>

      <string name="custom_navigation">Custom Navigation</string>
      <string name="custom_navigation_content">If you find that list and tab navigation are not suitable for your application you may replace it with a custom layout.</string>

      <string name="dialog">Dialog</string>
      <string name="dialog_content">This is a demonstration of how you can give an activity the look of a dialog.\n\nWhile there is a light version of this theme, it cannot be set programmatically without disabling the fancy transparent outer background. In order for this effect the theme must be set in the manifest.</string>

      <string name="feature_toggles">Feature Toggles</string>
      <string name="feature_toggles_content">Use these buttons to create various configurations with the action bar to see how it behaves.</string>

      <string name="iprogress">Indeterminate Progress</string>
      <string name="iprogress_content">The action bar includes a standard indeterminate progress bar. The methods for accessing it are prefixed with `support`. See the source for this demo for more information.</string>

      <string name="list_navigation">List Navigation</string>
      <string name="list_navigation_content">List navigation requires the use of a special layout for the spinner item. Failure to use it will result in your spinner text being the same color as the action bar background on pre-3.0. See the source code of this demo for more information.</string>

      <string name="overlay">Overlay</string>
      <string name="overlay_content">Overlay can be useful if you have a lot of scrolling content, especially if that content is images. Remember to lead your content with a margin so that it starts below the action bar when scrolled to the top.</string>

      <string name="preference">Preference</string>
      <string name="preference_content">You can use the `SherlockPreferenceActivity` base class to place the action bar on top of a normal `PreferenceActivity`.\n\nThis does not yet support the use of `PreferenceFragments`, however.</string>

      <string name="progress">Progress</string>
      <string name="progress_content">The action bar includes a standard progress bar. The methods for accessing it are prefixed with `support`. See the source for this demo for more information.</string>

      <string name="search">Search CRM</string>
      <string name="search_views_content">SearchView allows you provide a unified mechanism of searching with optional features such as auto-completion and an always-expanded mode.</string>

      <string name="simple">Simple</string>
      <string name="simple_content">This is a simple showcase of how easy it is to add the action bar to your activities. Take a look at the source code, it\'s surprisingly simple!</string>

      <string name="split">Split Action Items</string>
      <string name="split_content">This activity is a demonstration of how split action items work. When you are concerned about the available room for items on small screens you should use this feature.</string>

      <string name="split_action_modes">Split Action Modes</string>

      <string name="static_attach">Static Attachment</string>
      <string name="static_attach_content">This is a simple showcase of how easy it is to add the action bar to your activities without having to extend from a custom activity. Take a look at the source code, it\'s surprisingly simple!</string>

      <string name="styled">Styled</string>
      <string name="styled_content">This is a simple showcase of how to style the action bar to your liking. Be sure to remember that you need to consider both the custom and native action bar when styling. Looking at this activity\'s style is a good way to start.</string>

      <string name="submenus">Sub-menus</string>
      <string name="submenus_content">This activity is a demonstration of how sub-menus work when they are either an action item or an item in the overflow menu.</string>

      <string name="tab_navigation">Tab Navigation</string>
      <string name="tab_navigation_content">Tabs can be useful for switching between a limited number of items. You can also collapse the main body of the action bar on small devices so that only the tab bar is displayed. See the source for more information.</string>

      <string name="tab_navigation_collapsed">Tab Navigation (Collapsed)</string>



      <string name="action_bar_share_with">Share with…</string>



      <string name="inline_preferences">In-line preferences</string>
      <string name="dialog_based_preferences">Dialog-based preferences</string>
      <string name="launch_preferences">Launch preferences</string>
      <string name="preference_attributes">Preference attributes</string>

      <string name="title_checkbox_preference">Checkbox preference</string>
      <string name="summary_checkbox_preference">This is a checkbox</string>

      <string name="title_edittext_preference">Edit text preference</string>
      <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
      <string name="dialog_title_edittext_preference">Enter your favorite animal</string>

      <string name="title_list_preference">List preference</string>
      <string name="summary_list_preference">An example that uses a list dialog</string>
      <string name="dialog_title_list_preference">Choose one</string>

      <string name="title_intent_preference">Intent preference</string>
      <string name="summary_intent_preference">Launches an Activity from an Intent</string>

      <string name="title_my_preference">My preference</string>
      <string name="summary_my_preference">This is a custom counter preference</string>

      <string name="title_advanced_toggle_preference">Haunted preference</string>
      <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
      <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>

      <string name="title_parent_preference">Parent checkbox preference</string>
      <string name="summary_parent_preference">This is visually a parent</string>
      <string name="title_child_preference">Child checkbox preference</string>
      <string name="summary_child_preference">This is visually a child</string>

      <string name="example_preference_dependency">Example preference dependency</string>
      <string name="title_wifi">WiFi</string>
      <string name="title_wifi_settings">WiFi settings</string>

      <string name="default_value_list_preference">beta</string>
      <string name="default_value_edittext_preference">Default value</string>-->
    <string name="search_hint">Search CRM Customers</string>
    <string name="app_label">CRM</string>
    <string name="user_account">My Profile</string>
    <string name="search">Search CRM Customers</string>
    <string name="app_name">Spring CRM</string>
    <string name="username">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="customer_id">#</string>
    <string name="sign_out">Sign Out</string>
    <string name="your_user_profile">Your Profile</string>
    <string name="your_user_profile_introduction">You can update your profile easily:</string>
    <string name="save">Save</string>
    <string name="password">Password:</string>
    <string name="your_user_profile_photo">Your Photo</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_content_description">Welcome to the Spring CRM</string>

</resources>
