<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"

    android:layout_height="40dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_id"
        android:id="@+id/customer_id"
        android:paddingEnd="5dp"
        android:textSize="@dimen/abs__action_bar_title_text_size"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:paddingStart="5dp"
        android:phoneNumber="false"
        android:password="false" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:id="@+id/first_name_label"
        android:layout_gravity="center|left"
        android:paddingEnd="10dp"
        android:textSize="@dimen/abs__action_bar_title_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:id="@+id/last_name_label"
        android:layout_gravity="center|left"

        android:textSize="@dimen/abs__action_bar_title_text_size" />


</LinearLayout>