<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:useDefaultMargins="true"
            android:alignmentMode="alignBounds"
            android:columnOrderPreserved="false"

            android:columnCount="2" android:orientation="horizontal">


    <!-- username   -->
    <!--
        <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                />-->

    <TextView android:layout_columnSpan="2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:id="@+id/user_profile_description"/>

    <!-- first name   -->

    <TextView
            android:text="@string/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            />
    <EditText android:layout_columnSpan="2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="text" android:layout_gravity="left"
              android:id="@+id/first_name" android:hint="@string/first_name"/>
    <!--  last name   -->

    <TextView
            android:text="@string/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            />

    <EditText android:layout_columnSpan="2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="text" android:layout_gravity="left"
              android:id="@+id/last_name" android:hint="@string/last_name"/>

    <ImageView
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_photo_description"
            android:id="@+id/profile_photo"

            />

    <Button android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:text="@string/save"
            android:enabled="false"/>

    <!--


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"

            android:layout_row="5"
            android:layout_column="3" />-->
</GridLayout>